After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 678208 - Fix memory leak in rb_gst_media_type_matches_profile
Fix memory leak in rb_gst_media_type_matches_profile
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-16 11:29 UTC by Christophe Fergeau
Modified: 2012-06-16 12:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix memory leak in rb_gst_media_type_matches_profile (780 bytes, patch)
2012-06-16 11:29 UTC, Christophe Fergeau
committed Details | Review

Description Christophe Fergeau 2012-06-16 11:29:36 UTC
'caps' is created with gst_caps_from_string so it must be unref'ed
when it's no longer used.
Comment 1 Christophe Fergeau 2012-06-16 11:29:38 UTC
Created attachment 216558 [details] [review]
Fix memory leak in rb_gst_media_type_matches_profile
Comment 2 Jonathan Matthew 2012-06-16 11:53:05 UTC
Review of attachment 216558 [details] [review]:

ok
Comment 3 Christophe Fergeau 2012-06-16 12:06:29 UTC
Attachment 216558 [details] pushed as ad8ab01 - Fix memory leak in rb_gst_media_type_matches_profile