Fix memory leak in rb_gst_media_type_matches_profile

'caps' is created with gst_caps_from_string so it must be unref'ed
when it's no longer used.

https://bugzilla.gnome.org/show_bug.cgi?id=678208